Update title and celebration messages in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For My Favorite Person</title>
+  <title>For my special PUBLO</title>
   <style>
     body{
       display:flex; flex-direction:column; align-items:center; justify-content:center;
@@ -46,8 +46,8 @@
     function celebrate(){
       document.body.innerHTML = `
         <div style="text-align:center;">
-          <h1 style="font-size:4rem;color:#ff4d6d;margin:0;">YAY! 🥰</h1>
-          <p style="font-size:1.5rem;color:#ff4d6d;">I knew you'd make the right choice!</p>
+          <h1 style="font-size:4rem;color:#ff4d6d;margin:0;">Such a sweet BreadButterHoney 🦋</h1>
+          <p style="font-size:1.5rem;color:#ff4d6d;">Hooray! You've made the right choice 😈</p>
           <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueXpueXpueXpueXpueXpueXpueXpueXpueXpueXpueXpueCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KztT2c4u8mYYUiMKdJ/giphy.gif"
                alt="Love" style="border-radius:20px;width:300px;">
         </div>`;
