--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For my special PABLO</title>
+  <title>For my special PUBLO</title>
   <style>
     body{
       display:flex; flex-direction:column; align-items:center; justify-content:center;
@@ -149,8 +149,9 @@
     yesBtn.addEventListener('click', () => {
       main.innerHTML = `
         <div style="text-align:center;">
-          <h1 style="font-size:3.2rem;color:#ff4d6d;margin:0;">Such a sweet BreadButterHoney</h1>
-          <p style="font-size:1.35rem;color:#ff4d6d;margin-top:12px;">Hooray! You've made the right choice 😈</p>
+          <h1 style="font-size:3.2rem;color:#ff4d6d;margin:0;">Such a sweet Honey 🦋</h1>
+          <p style="font-size:1.35rem;color:#ff4d6d;margin-top:12px;">Hooray! Right choice 😈</p>
+          <p style="font-size:0.95rem;color:#6b7c93;margin-top:14px;font-style:italic;opacity:0.85;">Dont miss hidden message...</p>
           <img
             src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueXpueXpueXpueXpueXpueXpueXpueXpueXpueXpueXpueCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KztT2c4u8mYYUiMKdJ/giphy.gif"
             alt="Love"
